--- a/css/commons/reset.css
+++ b/css/commons/reset.css
@@ -10,6 +10,12 @@
 *{
     margin: 0;
     padding: 0;
+    /*텍스트 드래그방지*/
+    -moz-user-select: -moz-none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -khtml-user-select: none;
+    user-select:none;
 }
 
 html, body{
@@ -29,6 +35,10 @@ img{
 a{
     text-decoration: none;
     color:#161616;
+}
+
+div {
+    transition: .5s;
 }
 /*body, h1, h2, h3, h4, h5, h6, li, p, span, div {font-family:"Montserrat","Nanum Square","NanumSquare", sans-serif !important; }*/
 
